--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>This is git text</h1>
     <img src="ancher.jpg" alt="">
+    <div>
+        <h3>New Blog</h3>
+        <h5>I can write a another blog</h5>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum cum repudiandae provident iste sed eligendi, ex culpa dicta, laborum voluptates perferendis magnam ducimus ipsum debitis, ut odio recusandae esse veritatis!</p>
+    </div>
 </body>
 </html>
